--- a/src/components/books/BookList.css
+++ b/src/components/books/BookList.css
@@ -27,8 +27,8 @@
 }
 
 .logout-button {
-    display: block;
-    margin: 0 auto 20px auto;
+    display: flex;
+    margin: 10px 10px 20px auto;
     padding: 10px 20px;
     font-size: 1em;
     color: #fff;
