--- a/src/components/books/BookList.css
+++ b/src/components/books/BookList.css
@@ -17,7 +17,7 @@
     border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;
-  }
+}
 
 .booklist-title {
     font-size: 2em;
@@ -26,9 +26,28 @@
     color: #333;
 }
 
-.logout-button {
+.button-container {
     display: flex;
-    margin: 10px 10px 20px auto;
+    justify-content: space-between;
+    margin: 10px;
+}
+
+.addbook-button {
+    padding: 10px 20px;
+    font-size: 1em;
+    color: #fff;
+    background-color: #0bad08;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.addbook-button:hover {
+    background-color: #0bad08d4;
+}
+
+.logout-button {
     padding: 10px 20px;
     font-size: 1em;
     color: #fff;
