--- a/src/components/books/BookDetail.css
+++ b/src/components/books/BookDetail.css
@@ -16,12 +16,14 @@
 
 .book-detail {
     flex: 1;
-    padding-right: 20px;
+    padding: 1em 2em 1em;
 }
 
 .book-cover {
-    flex: 0 0 200px;
     text-align: center;
+    padding: 2em 2em 1em;
+    border: #333;
+    border-width: 0.5px;
 }
 
 .book-cover img {
