--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,41 +1,70 @@
 .profile-container {
-	text-align: center;
-	margin-top: 50px;
-	font-family: Arial, sans-serif;
+	padding: 20px;
+    position: relative;
+    font-family: Arial, sans-serif;
+}
+
+.logout-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
 
 .profile-header {
 	font-size: 2em;
-	color: #333;
-}
-
-.profile-picture {
-	border-radius: 50%;
-	width: 150px;
-	height: 150px;
 	margin-bottom: 20px;
 }
 
-.profile-name {
+.profile-details {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-picture {
+	width: 150px;
+	height: 150px;
+	border-radius: 50%;
+    border: #000000;
+    border-width: 0.5px;
+	margin-bottom: 20px;
+}
+
+.profile-name, .profile-email {
+	font-size: 1.2em;
+	margin-bottom: 10px;
+}
+
+.books-header, .transactions-header {
 	font-size: 1.5em;
-	color: #555;
+	margin-top: 20px;
+	margin-bottom: 10px;
 }
 
-.profile-email {
-	font-size: 1em;
-	color: #777;
+.grid-container {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+	gap: 20px;
 }
 
-.logout-button {
-	padding: 10px 20px;
-	font-size: 16px;
-	background-color: #007BFF;
-	color: white;
-	border: none;
+.grid-item {
+	border: 1px solid #ccc;
+	padding: 10px;
 	border-radius: 5px;
-	cursor: pointer;
+	background-color: #f9f9f9;
 }
 
-.logout-button:hover {
-	background-color: #0056b3;
+.toggle-button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.logout-profile-button {
+	margin-top: 20px;
+	padding: 10px 20px;
+	font-size: 1em;
+	cursor: pointer;
 }
