Update profile page to show received borrow requests and add feature to accept or deny requests

--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -36,7 +36,7 @@
 	margin-bottom: 10px;
 }
 
-.books-header, .transactions-header {
+.books-header, .transactions-header, .borrow-requests-header {
 	font-size: 1.5em;
 	margin-top: 20px;
 	margin-bottom: 10px;
